--- a/applications.html
+++ b/applications.html
@@ -667,7 +667,7 @@
                             <p class="mb-1"><strong>Transaction ID:</strong> TXN456789123</p>
                             <p class="mb-1"><strong>Date & Time:</strong> April 10, 2025 - 05:45 PM</p>
                             <p class="mb-1"><strong>Amount Paid:</strong> ₹300.00 (Including ₹100 Tax)</p>
-                            <p class="mb-1"><strong>Payment Method:</strong> UPI (Google Pay)</p>
+                            <p class="mb-1"><strong>Payment Method:</strong> UPI (Bluemen pay)</p>
                           </div>
                       
                           <div class="text-center mb-4">
