--- a/stakeholdersPortal.html
+++ b/stakeholdersPortal.html
@@ -419,7 +419,7 @@
         <p class="mb-1"><strong>Transaction ID:</strong> TXN456789123</p>
         <p class="mb-1"><strong>Date & Time:</strong> April 10, 2025 - 05:45 PM</p>
         <p class="mb-1"><strong>Amount Paid:</strong> ₦300.00 (Including ₦100 Tax)</p>
-        <p class="mb-1"><strong>Payment Method:</strong> UPI (Google Pay)</p>
+        <p class="mb-1"><strong>Payment Method:</strong> UPI (Bluemen Pay)</p>
       </div>
   
       <div class="text-center mb-4">
