changed payment method

--- a/login.html
+++ b/login.html
@@ -260,7 +260,7 @@
 
                         signIn.addEventListener("click",function(){
                             localStorage.setItem("login","true");
-                            window.location.href="cargoRelease.html";
+                            window.location.href=history.go(-1);
                             
                         })
 
