--- a/stakeholdersPortal.html
+++ b/stakeholdersPortal.html
@@ -1528,12 +1528,12 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-        let status=localStorage.getItem('login');
-        // alert(status);
-        if(!status){
-            console.log(status);
-            window.location.href="login.html";
-        }
+        // let status=localStorage.getItem('login');
+        // // alert(status);
+        // if(!status){
+        //     console.log(status);
+        //     window.location.href="login.html";
+        // }
     });
   </script>
 
