--- a/cargoRelease.html
+++ b/cargoRelease.html
@@ -990,12 +990,12 @@
     
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            let status=localStorage.getItem('login');
+            // let status=localStorage.getItem('login');
             // alert(status);
-            if(!status){
-                console.log(status);
-                window.location.href="login.html";
-            }
+            // if(!status){
+            //     console.log(status);
+            //     window.location.href="login.html";
+            // }
         });
       </script>
     
