--- a/cargoTracking.html
+++ b/cargoTracking.html
@@ -454,16 +454,16 @@
         });
         </script>
 
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function () {
             let status = localStorage.getItem('login');
-            // alert(status);
+           
             if (!status) {
                 console.log(status);
                 window.location.href = "login.html";
             }
         });
-    </script>
+    </script> -->
 
 
 
