--- a/dryport.html
+++ b/dryport.html
@@ -693,16 +693,15 @@
 
 
 
-  <script>
+  <!-- <script>
     document.addEventListener('DOMContentLoaded', function () {
       let status = localStorage.getItem('login');
-      // alert(status);
       if (!status) {
         console.log(status);
         window.location.href = "login.html";
       }
     });
-  </script>
+  </script> -->
 
   <script>
 
