--- a/applications.html
+++ b/applications.html
@@ -649,12 +649,36 @@
                         </div>
                       </div>
 
+                      <style>
+                     #payment-content {
+  position: relative;
+  z-index: 1;
+  background: none; /* remove any direct background */
+}
+
+#payment-content::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: url('https://upload.wikimedia.org/wikipedia/commons/b/b6/Seal_of_the_President_of_Nigeria.svg') no-repeat center center;
+  background-size: contain;
+  opacity: 0.15; /* adjust to desired faintness */
+  z-index: 0;
+  pointer-events: none; /* let clicks pass through */
+}
+
+#payment-content > * {
+  position: relative;
+  z-index: 1;
+}
+
+                      </style>
 
                       <div class="col-md-12 d-none" id="paymentProofSection">
                         <div class="col-md-12 border rounded p-4 bg-white" id="payment-content" style="font-family: 'Segoe UI', sans-serif; color: #333; max-width: 800px; margin: auto;">
                           
                           <div class="text-center mb-3">
-                            <h5 class="fw-bold text-uppercase mb-0">PorComS EXIM Clearance Certification System</h5>
+                            <h4 class="fw-bold text-uppercase mb-0">PorComS EXIM Clearance Certification System</h4>
                             <small class="text-muted">Official Payment Receipt</small>
                           </div>
                           <hr>
@@ -663,10 +687,11 @@
                             <p class="mb-1"><strong>Receipt Number:</strong> RCPT-2025-000456</p>
                             <p class="mb-1"><strong>Applicant Name:</strong> JHON DOE</p>
                             <p class="mb-1"><strong>Application Type:</strong> Export Certificate</p>
-                            <p class="mb-1"><strong>Payment Reference:</strong> UPI20250410123456</p>
+                            <p class="mb-1"><strong>Payment Reference:</strong> ENAIRA20250410123456</p>
                             <p class="mb-1"><strong>Transaction ID:</strong> TXN456789123</p>
                             <p class="mb-1"><strong>Date & Time:</strong> April 10, 2025 - 05:45 PM</p>
-                            <p class="mb-1"><strong>Amount Paid:</strong> ₹300.00 (Including ₹100 Tax)</p>
+                            <p class="mb-1"><strong>VAT:</strong> ₦100.00 (Including ₦100 Tax)</p>
+                            <p class="mb-1"><strong>Amount Paid:</strong> ₦300.00 (Including ₦100 Tax)</p>
                             <p class="mb-1"><strong>Payment Method:</strong> UPI (Bluemen pay)</p>
                           </div>
                       
