--- a/applications.html
+++ b/applications.html
@@ -690,7 +690,7 @@
                             <p class="mb-1"><strong>Payment Reference:</strong> ENAIRA20250410123456</p>
                             <p class="mb-1"><strong>Transaction ID:</strong> TXN456789123</p>
                             <p class="mb-1"><strong>Date & Time:</strong> April 10, 2025 - 05:45 PM</p>
-                            <p class="mb-1"><strong>VAT:</strong> ₦100.00 (Including ₦100 Tax)</p>
+                            <p class="mb-1"><strong>VAT:</strong> ₦100.00</p>
                             <p class="mb-1"><strong>Amount Paid:</strong> ₦300.00 (Including ₦100 Tax)</p>
                             <p class="mb-1"><strong>Payment Method:</strong> UPI (Bluemen pay)</p>
                           </div>
