--- a/economics.html
+++ b/economics.html
@@ -329,7 +329,7 @@
                                 <div class="card shadow-sm">
                                     <div class="card-header bg-primary text-white">Total Port Usage Fees</div>
                                     <div class="card-body">
-                                        <h5 class="card-title text-success">$10,000</h5>
+                                        <h5 class="card-title text-success">₦10,000</h5>
                                         <p class="card-text">Current total port usage fees.</p>
                                     </div>
                                 </div>
