--- a/reports.html
+++ b/reports.html
@@ -369,7 +369,7 @@
                             <div class="card shadow-sm">
                               <div class="card-header bg-secondary text-white">Report Result</div>
                               <div class="card-body">
-                                <p class="text-muted">Report content will be displayed here after generation.</p>
+                                <!-- <p class="text-muted">Report content will be displayed here after generation.</p> -->
                         
                                 <!-- Example Table Format -->
                                 <div class="table-responsive">
@@ -386,13 +386,13 @@
                                       <tr>
                                         <td>1</td>
                                         <td>Total Port Usage Fees</td>
-                                        <td>₹1,25,000</td>
+                                        <td>₦1,25,000</td>
                                         <td class="font-weight-bold text-success">Completed</td>
                                       </tr>
                                       <tr>
                                         <td>2</td>
                                         <td>Total Transport Costs</td>
-                                        <td>₹40,000</td>
+                                        <td>₦40,000</td>
                                         <td class="font-weight-bold text-success">Completed</td>
                                       </tr>
                                       <tr>
