--- a/tracking.html
+++ b/tracking.html
@@ -318,7 +318,7 @@
                                 <div class="card text-bg-primary shadow-sm">
                                   <div class="card-body">
                                     <h5 class="text-dark">Port Usage Fees</h5>
-                                    <p class="text-primary mt-2 mb-2 fs-4">₹1,20,000</p>
+                                    <p class="text-primary mt-2 mb-2 fs-4">₦1,20,000</p>
                                     <small class="text-success">+5% this week</small>
                                   </div>
                                 </div>
@@ -327,7 +327,7 @@
                                 <div class="card text-bg-success shadow-sm">
                                   <div class="card-body">
                                     <h5 class="text-dark">Transport Cost</h5>
-                                    <p class="text-primary mt-2 mb-2 fs-4">₹2,500 / trip</p>
+                                    <p class="text-primary mt-2 mb-2 fs-4">₦2,500 / trip</p>
                                     <small class="text-danger fw-4">-2% this week</small>
                                   </div>
                                 </div>
